--- a/index.html
+++ b/index.html
@@ -16,13 +16,9 @@
         <span class="insta"></span><span class="face"></span><span class="mail"></span>
     </div>
     <div id="text-container">
-        <p>A Use Nay é de uma importância imensa em minha   vida, com o nascimento da Laura comecei a me interessar pelos assessórios, mas somente na pandemia que realmente me encantei por esse mundo maravilhoso. Sem nenhum conhecimento comecei com os laços, até que me envolvi com as tiaras bordadas... Ah esse mundo me encantou, eu me encontrei.
-
-            Desde então nunca mais parei, e tenho me encontrado todos os dias, em cada acessório confeccionado.
-            
-            Assim, surgiu a intenção de transformar as inspirações e sonhos das nossas clientes em realidade, cada pedido significa uma nova e única história, meu propósito é produzir peças exclusivas e personalizadas, com a finalidade de eternizar momentos especiais e ser um presente exclusivo e inesquecível ao destinatário querido. Aqui o trabalho é feito a mão, cada detalhe produzido com o afeto da sua história e o amor genuíno que nos motiva a cada peça, buscando transmitir a personalidade de cada cliente, é uma experiência mútua.
-            
-            Minha missão é receber sorrisos a cada envio, nos confie o seu e encante-se!</p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur libero sapiente velit saepe inventore, consectetur tempore aperiam nihil odit. Labore ipsam minus harum quidem omnis saepe quia sunt sequi aliquam!
+        </p>
     </div>
     <div id="button-container">
         <button>texto</button>
