--- a/index.html
+++ b/index.html
@@ -5,19 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="design.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="header">
         <img src="assets/Use_Nay_logo-removebg-preview.png" alt="Use Nay">
-        <div id="bg-img"></div>
+        
         <p>texto</p>
+        <div id="social-media-container">
+        <div class="media-content"><img src="assets/insta.png" alt=""></div><div class="media-content"><img src="assets/face.png" alt=""></div><div class="media-content"><img src="assets/mail.png" alt=""></div>
+        </div>
     </div>
-    <div id="social-media-container">
-        <span class="insta"></span><span class="face"></span><span class="mail"></span>
-    </div>
+    
     <div id="text-container">
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur libero sapiente velit saepe inventore, consectetur tempore aperiam nihil odit. Labore ipsam minus harum quidem omnis saepe quia sunt sequi aliquam!
+            <br><br>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, provident! Recusandae doloremque magni laborum necessitatibus provident voluptas, quis, suscipit consequatur mollitia, aliquid qui. Odit quisquam consequuntur vero vitae, eius laudantium?
+            <br><br>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae fuga unde tenetur mollitia accusamus minima excepturi nam deserunt perspiciatis ab praesentium, doloribus et omnis impedit est atque suscipit tempore. Quia!
         </p>
     </div>
     <div id="button-container">
